--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -13,6 +13,8 @@ $base-color-text: $gray;
 
 // Header
 $header-bg: $yellow;
+$header-menu-bg: $dark-gray;
+$header-menu-color: $white;
 
 // Search
 $search-bgc: $white;
