Added pagination, breadcrumbs

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -5,3 +5,6 @@
 @import "personal-area/personal-area";
 @import "personal-auto/personal-auto";
 @import "social/social";
+@import "breadcrumbs/breadcrumbs";
+@import "articles-detail/articles-detail";
+@import "pagination/pagination";
