Home page is done

--- a/src/blocks/components/logo/logo.pug
+++ b/src/blocks/components/logo/logo.pug
@@ -1,4 +1,4 @@
 .logo
     ._img
-        img(src="img/sprites/sprite.svg#logo")
+        img(src="img/sprites/intermediate-svg/logo.svg")
     ._text База данных по ремонту и обслуживанию автомобилей
