--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -39,3 +39,10 @@ $personal-area-bg: $dirty-white;
 // Personal auto
 $personal-auto: $gray;
 
+// Filter main
+$filter-main-title: $dark-gray;
+
+// Section bgc
+$section-white: $white;
+$section-gray: #F3F3F3;
+
