--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -2,9 +2,16 @@
 @import "button/button";
 @import "sub-menu/sub-menu";
 @import "search/search";
+@import "card/card";
+@import "card-question/card-question";
 @import "personal-area/personal-area";
 @import "personal-auto/personal-auto";
 @import "social/social";
 @import "breadcrumbs/breadcrumbs";
 @import "articles-detail/articles-detail";
 @import "pagination/pagination";
+@import "filter-main/filter-main";
+@import "car-selection/car-selection";
+@import "banner-ask-question/banner-ask-question";
+@import "note/note";
+@import "banners/banners";
