--- a/src/blocks/components/search/_search.scss
+++ b/src/blocks/components/search/_search.scss
@@ -10,6 +10,13 @@
     display: flex;
     padding: 6px 6px 6px 40px;
 
+    &:not(.search__icon) {
+      padding: 6px 6px 6px 15px;
+
+      &:before {
+        content: none;
+      }
+    }
     &:before {
       content: '';
       position: absolute;
