Fix article, added jquery, select2 and stylized select

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -8,10 +8,11 @@
 @import "personal-auto/personal-auto";
 @import "social/social";
 @import "breadcrumbs/breadcrumbs";
-@import "articles-detail/articles-detail";
+@import "article-detail/article-detail";
 @import "pagination/pagination";
 @import "filter-main/filter-main";
 @import "car-selection/car-selection";
 @import "banner-ask-question/banner-ask-question";
 @import "note/note";
 @import "banners/banners";
+@import "select/select";
