--- a/src/blocks/components/breadcrumbs/breadcrumbs.pug
+++ b/src/blocks/components/breadcrumbs/breadcrumbs.pug
@@ -1,6 +1,5 @@
-ul.breadcrumbs
-    li.breadcrumbs__item 
-        a.breadcrumbs__link(href="#") Главная
-    li.breadcrumbs__item 
-        a.breadcrumbs__link(href="#") Статьи
-h1.h1-breadcrumbs 7 проблем, поджидающих покупателя BMW 5-й серии в кузове F10       
+mixin breadcrumbs(list)
+    ul.breadcrumbs
+        for item in list
+            li.breadcrumbs__item
+                a.breadcrumbs__link(href="#")=item
