--- a/src/blocks/components/filter-main/_filter-main.scss
+++ b/src/blocks/components/filter-main/_filter-main.scss
@@ -1,8 +1,8 @@
 .filter-main {
   min-height: 479px;
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
+  background-repeat: no-repeat !important;
+  background-position: top center !important;
+  background-size: cover !important;
   padding-top: 44px;
   padding-bottom: 60px;
   box-sizing: border-box;
