--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,10 +5,14 @@ block variables
 block content
 	.container
 		include ../blocks/modules/main/main
-
-		h1=title
-		ul
-			li
-				a(href="/ui-kit.html") Ui-kit
-			li
-				a(href="/home.html") Главная
+		.article-content
+			h2=title
+			ul
+				li
+					a(href="ui-kit.html") Ui-kit
+				li
+					a(href="home.html") Главная
+				li
+					a(href="car-repair.html") Ремонт автомобиля
+				li
+					a(href="article-detail.html") Детальная статьи
