--- a/src/styles/general/_base.scss
+++ b/src/styles/general/_base.scss
@@ -40,6 +40,13 @@ h3,
   color: #16162d;
 }
 
+main {
+
+  h1 {
+    margin-bottom: 45px;
+  }
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
