Added pages: car repair, searching results, marks and models

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -11,6 +11,8 @@
 @import "article-detail/article-detail";
 @import "pagination/pagination";
 @import "filter-main/filter-main";
+@import "filter/filter";
+@import "filter-search/filter-search";
 @import "car-selection/car-selection";
 @import "banner-ask-question/banner-ask-question";
 @import "note/note";
