--- a/src/blocks/components/pagination/pagination.pug
+++ b/src/blocks/components/pagination/pagination.pug
@@ -1,10 +1,9 @@
 .pagination
     nav.pagination__wrap
-        a(href="#").pagination__prev
-        .pagination__list
+        //a(href="#").pagination__prev
+        .pagination__list Назад
             a(href="#").pagination__item 1
             a(href="#").pagination__item.active 2
             a(href="#").pagination__item 3
             a(href="#").pagination__item 4
-            a(href="#").pagination__item Далее
-        a(href="#").pagination__next
+        a(href="#").pagination__next Далее
