--- a/src/blocks/components/select/select.pug
+++ b/src/blocks/components/select/select.pug
@@ -1,4 +1,8 @@
-mixin select(options)
-    select.select.js-select
-        for option in options
-            option(value=option)=option
+mixin select(options, nameSelect)
+    select(name=nameSelect).select.js-select
+        for option, key in options
+            - var attributes = {};
+            if key === 0
+                - var attributes = {'disabled': true, 'selected': true, 'hidden': true};
+
+            option(value=option)&attributes(attributes)=option
