--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -14,7 +14,7 @@ header.header
                     .header__personal-area
                         include ../../components/personal-area/personal-area
                         a(href="#").button-black.header__ask-question Задать вопрос
-                    +personal-area('Mazda 323 III (BF) 1985 - 1989')
+                    +personal-auto('Mazda 323 III (BF) 1985 - 1989')
     .header__menu
         .container
             nav.header__menu-list
