--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -16,3 +16,7 @@ block content
 					a(href="car-repair.html") Ремонт автомобиля
 				li
 					a(href="article-detail.html") Детальная статьи
+				li
+					a(href="searching-results.html") Результаты поиска
+				li
+					a(href="marks-and-models.html") Марки и модели
