--- a/src/blocks/components/personal-auto/_personal-auto.scss
+++ b/src/blocks/components/personal-auto/_personal-auto.scss
@@ -2,9 +2,16 @@
   position: relative;
   text-decoration: none;
   color: $personal-auto;
-  border-bottom: 0.5px solid #ABABAB;
-  padding-bottom: 3px;
+  font-size: 15px;
+  font-weight: 500;
   margin-left: 42px;
+
+  & a {
+    text-decoration: none;
+    color: $personal-auto;
+    border-bottom: 0.5px solid #ABABAB;
+    padding-bottom: 3px;
+  }
 
   &:before {
     content: '';
