--- a/src/blocks/components/select/select.scss
+++ b/src/blocks/components/select/select.scss
@@ -4,6 +4,8 @@
 
 .select2-container--infoauto {
 
+  width: 100% !important;
+
   & .select2-selection--single {
     background: $white;
     border: 1px solid $white;
@@ -66,6 +68,10 @@
     height: 40px;
     box-sizing: border-box;
     padding: 12px 9px 12px 13px;
+
+    &[aria-disabled=true] {
+      display: none;
+    }
 
     &:hover {
       background: #EFF1F4;
