--- a/src/pages/car-repair.pug
+++ b/src/pages/car-repair.pug
@@ -5,8 +5,19 @@ block variables
 
 block content
     include ../blocks/components/breadcrumbs/breadcrumbs
-    main
+    include ../blocks/components/card/card
+    include ../data/car-repair
+    main.section-gray
         .container
             +breadcrumbs(breadcrumbs)
             h1=title
             include ../blocks/components/filter/filter
+            .card-list.card-list__border-line
+                for card in cards
+                    if (card.type === 'card')
+                        +card(card.img, card.title, card.marks)
+                    else if (card.type === 'banner')
+                        a(href="#").card
+                            img(src=card.img, alt='')
+
+            include ../blocks/components/pagination/pagination
