--- a/src/styles/general/_base.scss
+++ b/src/styles/general/_base.scss
@@ -1,7 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+@include reset();
 
 html,
 body {
@@ -41,6 +38,8 @@ h3,
 }
 
 main {
+  padding-bottom: 60px;
+  height: 100%;
 
   h1 {
     margin-bottom: 45px;
@@ -79,12 +78,20 @@ main {
   padding-top: 40px;
   padding-bottom: 40px;
 
-  & h3, .h3 {
-    margin-bottom: 40px;
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 40px;
   }
 
-  &__container {
-    @include row-flex();
+  &__list {
+    margin-bottom: 50px;
+
+    & h2,
+    & .h2 {
+      margin-bottom: 25px;
+    }
   }
 }
 
@@ -94,4 +101,8 @@ main {
 
 .section-gray {
   background-color: $section-gray;
+}
+
+body .hide {
+  display: none;
 }
