Added personal area, tabs, change password form

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -2,9 +2,11 @@
 @import "button/button";
 @import "sub-menu/sub-menu";
 @import "search/search";
+@import "hint/hint";
 @import "card/card";
 @import "card-question/card-question";
-@import "personal-area/personal-area";
+@import "personal-area-icon/personal-area-icon";
+@import "personal-area-head/personal-area-head";
 @import "personal-auto/personal-auto";
 @import "social/social";
 @import "breadcrumbs/breadcrumbs";
