--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -11,8 +11,8 @@ header.header
                     include ../../components/sub-menu/sub-menu
                     +search('Поиск по сайту', true)
                 .header__right
-                    .header__personal-area
-                        include ../../components/personal-area/personal-area
+                    .header__personal-area-icon
+                        include ../../components/personal-area-icon/personal-area-icon
                         a(href="#").button-black.header__ask-question Задать вопрос
                     +personal-auto('Mazda 323 III (BF) 1985 - 1989')
     .header__menu
