--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -20,3 +20,5 @@ block content
 					a(href="searching-results.html") Результаты поиска
 				li
 					a(href="marks-and-models.html") Марки и модели
+				li
+					a(href="personal-area.html") Личный кабинет
