--- a/src/blocks/components/search/_search.scss
+++ b/src/blocks/components/search/_search.scss
@@ -30,7 +30,7 @@
       z-index: 1;
     }
 
-    & input {
+    & input[type='text'] {
       width: 100%;
       border: none;
       font-weight: 500;
@@ -38,10 +38,8 @@
       line-height: 30px;
       color: $search-input-text;
       outline: none;
-
-      &:focus {
-        outline: none;
-      }
+      background: $search-bgc;
+      padding: 0;
     }
 
     & button {
