--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -2,3 +2,4 @@
 @import "footer/footer";
 @import "main/main";
 @import "marks-and-models/marks-and-models";
+@import "personal-area/personal-area";
