--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -51,7 +51,7 @@
     margin-left: 12px;
   }
 
-  &__personal-area {
+  &__personal-area-icon{
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -91,7 +91,4 @@
       }
     }
   }
-
-
-
 }
