--- a/src/blocks/modules/main/main.pug
+++ b/src/blocks/modules/main/main.pug
@@ -1,6 +1,6 @@
 .main
 	picture._img
-		img(src="../img/pic_webp.png" alt="").img-responsive
+		img(src="img/pic_webp.png" alt="").img-responsive
 	._text
 		p
 			| Чтобы начать работу, отредактируйте файл
