--- a/src/blocks/components/pagination/_pagination.scss
+++ b/src/blocks/components/pagination/_pagination.scss
@@ -29,11 +29,19 @@
 
     &__next {
         margin-left: 15px;
+
+        &:hover {
+            border-bottom: 2px solid #ffd223;
+        }
     }
 
     &__item {
         width: 40px;
         height: 40px;
+
+        &:hover {
+            background: #ffd223;
+        }
     }
 
     &__item.active {
