Added ledger amd personal auto

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -20,4 +20,5 @@
 @import "note/note";
 @import "banners/banners";
 @import "select/select";
+@import "ledger/ledger";
 @import "404-center/404-center";
