--- a/src/blocks/modules/personal-area/_personal-area.scss
+++ b/src/blocks/modules/personal-area/_personal-area.scss
@@ -10,6 +10,15 @@
 
 .personal-area {
 
+  & button {
+    max-width: 170px;
+    width: 100%;
+    height: 42px;
+    box-sizing: border-box;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   &__logout {
     @include personal-area-link;
   }
@@ -77,4 +86,38 @@
       width: 100%;
     }
   }
+
+  &__auto {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #e0e0e0;
+    box-sizing: border-box;
+    border-radius: 3px;
+    padding: 19px 19px 15px 16px;
+    margin-bottom: 10px;
+
+    &-wrap {
+      margin-bottom: 40px;
+    }
+
+    &__info {
+      font-weight: normal;
+      font-size: 15px;
+      color: #333333;
+    }
+
+    &__remove {
+      position: relative;
+      color: #919191;
+
+      &::before {
+        position: absolute;
+        content: "";
+        width: 22px;
+        height: 22px;
+      }
+    }
+  }
+
+
 }
