--- a/src/blocks/modules/personal-area/personal-area.pug
+++ b/src/blocks/modules/personal-area/personal-area.pug
@@ -1,3 +1,29 @@
+include ../../components/select/select
+
+-
+    var optionsMark = [
+        'Марка',
+        'Toyota',
+        'Лада',
+        'Mazda'
+    ];
+
+-
+    var optionsModel = [
+        'Модель',
+        'Camry',
+        'Vesta',
+        '323'
+    ];
+
+-
+    var optionsGeneration = [
+        'Поколение',
+        '2018',
+        '2016',
+        'III (BF), 1985 — 1989'
+    ];
+
 section.personal-area
     .container
         include ../../components/personal-area-head/personal-area-head
@@ -9,9 +35,9 @@ section.personal-area
                     li
                         a(href="#" data-tab-menu='autos') Автомобили
                     li
-                        a(href="#") Книга учета ТО
+                        a(href="#" data-tab-menu='ledger') Книга учета ТО
                     li
-                        a(href="#") Избранное
+                        a(href="#" data-tab-menu='favorite') Избранное
                     li
                         a(href="#") Мои вопросы
                 a(href="#").personal-area__logout Выйти
@@ -25,4 +51,40 @@ section.personal-area
                         input(name='new_password' type='password' placeholder='Новый пароль')
                         button(type='submit').button.button-yellow Сохранить
                 .personal-area__tab-item(data-tab-item='autos')
-                    | Авто
+                    .personal-area__auto-wrap
+                        .personal-area__auto
+                            .personal-area__info
+                                | Lexus LX III Рестайлинг 2 2015 - н.в.
+                            a(href="#").personal-area-area__remove
+                            .remove.personal-area__remove Удалить
+                        .personal-area__auto
+                            .personal-area__info
+                                | Lexus LX III Рестайлинг 2 2015 - н.в.
+                            a(href="#").personal-area-area__remove
+                            .remove.personal-area__remove Удалить
+                        .personal-area__auto
+                            .personal-area__info
+                                | Lexus LX III Рестайлинг 2 2015 - н.в.
+                            a(href="#").personal-area-area__remove
+                            .remove.personal-area__remove Удалить
+                        .personal-area__auto
+                            .personal-area__info
+                                | Lexus LX III Рестайлинг 2 2015 - н.в.
+                            a(href="#").personal-area-area__remove
+                            .remove.personal-area__remove Удалить
+
+                    h3.personal-area__h3 Добавить
+                    form.filter__form
+                        .filter__item
+                            +select(optionsMark, 'mark', 'js-select-gray')
+                        .filter__item
+                            +select(optionsModel, 'model', 'js-select-gray')
+                        .filter__item
+                            // Поколение
+                            +select(optionsGeneration, 'generation', 'js-select-gray')
+                        .filter__item
+                            button.button.button-yellow Сохранить
+
+                .personal-area__tab-item(data-tab-item='ledger')
+                    include ../../components/ledger/ledger
+                .personal-area__tab-item(data-tab-item='favorite')
