--- a/src/blocks/modules/personal-area/_personal-area.scss
+++ b/src/blocks/modules/personal-area/_personal-area.scss
@@ -1,123 +1,124 @@
 @mixin personal-area-link {
-  display: inline-block;
-  padding: 15px 40px;
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  color: $gray;
+    display: inline-block;
+    padding: 15px 40px;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    color: $gray;
 }
 
 .personal-area {
-
-  & button {
-    max-width: 170px;
-    width: 100%;
-    height: 42px;
-    box-sizing: border-box;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
-  &__logout {
-    @include personal-area-link;
-  }
-
-  &__tabs {
-    border-bottom: 1px solid $personal-area-border;
-    background-color: $white;
-    display: flex;
-    justify-content: space-between;
-    & ul {
-      display: flex;
-      & li {
-        & a {
-          @include personal-area-link;
-          box-sizing: border-box;
-          height: 100%;
-          border-bottom: 4px solid transparent;
-          padding-bottom: 11px;
-
-          &.active {
-            border-bottom: 4px solid $yellow;
-          }
-        }
-      }
-    }
-  }
-
-  &__content {
-    background-color: $white;
-    padding: 45px 40px;
-    box-sizing: border-box;
-  }
-
-  &__tab-item {
-    display: none;
-
-    &.active {
-      display: block;
-    }
-  }
-
-  &__h3 {
-    margin-top: 15px;
-    margin-bottom: 30px;
-    font-size: 21px;
-  }
-
-  &__info {
-    max-width: 396px;
-    width: 100%;
-    box-sizing: border-box;
-
-    & input {
-      margin-bottom: 15px;
-      width: 100%;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
+    & .card {
+        width: 380px;
     }
 
     & button {
-      max-width: 170px;
-      margin-top: 10px;
-      width: 100%;
+        max-width: 170px;
+        width: 100%;
+        height: 42px;
+        box-sizing: border-box;
+        padding-top: 0;
+        padding-bottom: 0;
     }
-  }
 
-  &__auto {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid #e0e0e0;
-    box-sizing: border-box;
-    border-radius: 3px;
-    padding: 19px 19px 15px 16px;
-    margin-bottom: 10px;
+    &__logout {
+        @include personal-area-link;
+    }
 
-    &-wrap {
-      margin-bottom: 40px;
+    &__tabs {
+        border-bottom: 1px solid $personal-area-border;
+        background-color: $white;
+        display: flex;
+        justify-content: space-between;
+        & ul {
+            display: flex;
+            & li {
+                & a {
+                    @include personal-area-link;
+                    box-sizing: border-box;
+                    height: 100%;
+                    border-bottom: 4px solid transparent;
+                    padding-bottom: 11px;
+
+                    &.active {
+                        border-bottom: 4px solid $yellow;
+                    }
+                }
+            }
+        }
+    }
+
+    &__content {
+        background-color: $white;
+        padding: 45px 40px;
+        box-sizing: border-box;
+    }
+
+    &__tab-item {
+        display: none;
+
+        &.active {
+            display: block;
+        }
+    }
+
+    &__h3 {
+        margin-top: 15px;
+        margin-bottom: 30px;
+        font-size: 21px;
     }
 
     &__info {
-      font-weight: normal;
-      font-size: 15px;
-      color: #333333;
+        max-width: 396px;
+        width: 100%;
+        box-sizing: border-box;
+
+        & input {
+            margin-bottom: 15px;
+            width: 100%;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
+        & button {
+            max-width: 170px;
+            margin-top: 10px;
+            width: 100%;
+        }
     }
 
-    &__remove {
-      position: relative;
-      color: #919191;
+    &__auto {
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid #e0e0e0;
+        box-sizing: border-box;
+        border-radius: 3px;
+        padding: 19px 19px 15px 16px;
+        margin-bottom: 10px;
 
-      &::before {
-        position: absolute;
-        content: "";
-        width: 22px;
-        height: 22px;
-      }
+        &-wrap {
+            margin-bottom: 40px;
+        }
+
+        &__info {
+            font-weight: normal;
+            font-size: 15px;
+            color: #333333;
+        }
+
+        &__remove {
+            position: relative;
+            color: #919191;
+
+            &::before {
+                position: absolute;
+                content: "";
+                width: 22px;
+                height: 22px;
+            }
+        }
     }
-  }
-
-
 }
