Added FAQ and start detail

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -19,7 +19,10 @@
 @import "banner-ask-question/banner-ask-question";
 @import "note/note";
 @import "banners/banners";
+@import "banners-sidebar/banners-sidebar";
 @import "select/select";
 @import "ledger/ledger";
 @import "404-center/404-center";
 @import "modals/modals";
+@import "share/share";
+@import "question/question";
