--- a/src/blocks/components/banners/banners.pug
+++ b/src/blocks/components/banners/banners.pug
@@ -1,11 +1,12 @@
-section.banners.section-white
-    .container
-        .banners__list
-            a(href="#").banners__item
-                img(src='img/banner_1.png', alt='')
-            a(href="#").banners__item
-                img(src='img/banner_2.png', alt='')
-            a(href="#").banners__item
-                img(src='img/banner_3.png', alt='')
-            a(href="#").banners__item
-                img(src='img/banner_4.png', alt='')
+mixin banners(isWhite=false)
+    section.banners(class=isWhite?'section-white':'')
+        .container
+            .banners__list
+                a(href="#").banners__item
+                    img(src='img/banner_1.png', alt='')
+                a(href="#").banners__item
+                    img(src='img/banner_2.png', alt='')
+                a(href="#").banners__item
+                    img(src='img/banner_3.png', alt='')
+                a(href="#").banners__item
+                    img(src='img/banner_4.png', alt='')
