--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,8 +9,6 @@ block content
 			h2=title
 			ul
 				li
-					a(href="ui-kit.html") Ui-kit
-				li
 					a(href="home.html") Главная
 				li
 					a(href="car-repair.html") Ремонт автомобиля
@@ -22,3 +20,11 @@ block content
 					a(href="marks-and-models.html") Марки и модели
 				li
 					a(href="personal-area.html") Личный кабинет
+				li
+					a(href="faq.html") Вопросы и ответы
+				li
+					a(href="faq-detail.html") Вопросы и ответы - Детальная
+				li
+					a(href="404.html") 404
+				li
+					a(href="ui-kit.html") Ui-kit
