--- a/src/blocks/modules/personal-area/_personal-area.scss
+++ b/src/blocks/modules/personal-area/_personal-area.scss
@@ -13,6 +13,12 @@
         width: 380px;
     }
 
+    & .card-question {
+        border: 1px solid #E0E0E0;
+        box-sizing: border-box;
+        border-radius: 8px;
+    }
+
     & button {
         max-width: 170px;
         width: 100%;
